[package]
name = "hornbill_apilib"
version = "0.1.0"
authors = ["jeffreys <jeffrey_smith@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
reqwest = { version = "0.10", features = ["blocking"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
http = "0.2"

[[example]]
name = "logon"
path = "examples/logon.rs"

[[example]]
name = "jsonresponse"
path = "examples/jsonresponse.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multithreaded"
path = "examples/multithreaded.rs"

[[example]]
name = "responseheaders"
path = "examples/responseheaders.rs"

[dev-dependencies]
serde-xml-rs = "0.4"