[package]
name = "hornbill_apilib"
version = "0.1.0"
authors = ["jeffreys <jeffrey_smith@hotmail.co.uk>"]
edition = "2018"
description = "rust api library for connecting to a hornbill instance"
readme = "README.md"
homepage = "https://www.hornbill.com/"
documentation = "https://docs.rs/hornbill_apilib"
repository = "https://github.com/hornbill/hornbill_apilib"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["blocking","rustls-tls"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
http = "0.2"

[[example]]
name = "logon"
path = "examples/logon.rs"

[[example]]
name = "jsonresponse"
path = "examples/jsonresponse.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multithreaded"
path = "examples/multithreaded.rs"

[[example]]
name = "responseheaders"
path = "examples/responseheaders.rs"

[dev-dependencies]
serde-xml-rs = "0.6.0"